@@ -37,9 +37,6 @@ import org.apache.tika.Tika;
 import org.apache.tika.io.CloseShieldInputStream;
 import org.apache.tika.metadata.Metadata;
 import org.apache.tika.mime.MediaType;
-import org.apache.tika.parser.AutoDetectParser;
-import org.apache.tika.parser.EmptyParser;
-import org.apache.tika.parser.Parser;
 import org.archive.io.ArchiveRecord;
 import org.archive.io.ArchiveRecordHeader;
 import org.archive.io.arc.ARCRecord;
@@ -73,35 +70,55 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 	// Global properties
 	//////////////////////////////////////////////////	
 	
-	// NOTE: these settings may be overridden if FormatProfiler.properties exists as a resource
+	final static String propertiesFile = 			"FormatProfiler.properties";
+	final static String INCLUDE_EXTENSION = 		"INCLUDE_EXTENSION";
+	final static String INCLUDE_SERVERTYPE = 		"INCLUDE_SERVERTYPE";
+	final static String USE_DROID = 				"USE_DROID";
+	final static String USE_TIKADETECT = 			"USE_TIKADETECT";
+	final static String USE_TIKAPARSER = 			"USE_TIKAPARSER";
+	final static String USE_LIBMAGIC = 				"USE_LIBMAGIC";
+	final static String INCLUDE_WAYBACKYEAR = 		"INCLUDE_WAYBACKYEAR";
+	final static String GENERATE_SEQUENCEFILE = 	"GENERATE_SEQUENCEFILE";
+	final static String GENERATE_METADATA_ZIP = 	"GENERATE_METADATA_ZIP";
+	final static String GENERATE_C3PO_ZIP = 		"GENERATE_C3PO_ZIP";
+	final static String INCLUDE_ARC_HEADERS = 		"INCLUDE_ARC_HEADERS";
+	final static String DUMP_FILES_IN_HDFS =		"DUMP_FILES_IN_HDFS";
+	final static String DUMP_TIKA_PARSER_TIMEOUT_FILES_IN_C3PO_ZIP = "DUMP_TIKA_PARSER_TIMEOUT_FILES_IN_C3PO_ZIP";
 	
-	private Properties props = null;
-	// Whether or not to include the extension in the output
-	private boolean INCLUDE_EXTENSION = true;
-	// Whether or not to report the server type
-	private boolean INCLUDE_SERVERTYPE = true;
-	// Should we use Droid?
-	private boolean USE_DROID = true;
-	// Should we use Tika (parser)?
-	private boolean USE_TIKAPARSER = true;
-	// Should we use Tika (detect)?
-	private boolean USE_TIKADETECT = true;
-	// Should we use libmagic?
-	private boolean USE_LIBMAGIC = false;
-	// Whether to ignore the year of harvest (if so, will set a default year)
-	private boolean INCLUDE_WAYBACKYEAR = false;
-	// Whether to generate a c3po compatible zip per input arc (Tika parser required)
-	private boolean GENERATE_C3PO_ZIP = true;
-	// Whether to generate a zip containing serialized metadata objects; one per input arc (Tika parser required)
-	private boolean GENERATE_METADATA_ZIP = true;
-	// Whether or not to generate a sequencefile per input arc containing serialized Tika parser Metadata objects
-	private boolean GENERATE_SEQUENCEFILE = true;
-    // whether to include the ARC header information in the output
-    private boolean INCLUDE_ARC_HEADERS = true;
-	// dump the payload contents into a zip file in hdfs
-    private boolean DUMP_FILES_IN_HDFS = false;
-    
-    private boolean DUMP_TIKA_PARSER_TIMEOUT_FILES_IN_C3PO_ZIP = false;
+	// NOTE: these default settings may be overridden if FormatProfiler.properties exists as a resource
+	private Map<String, Boolean> gProps = new HashMap<String, Boolean>() {
+		/**
+		 * 
+		 */
+		private static final long serialVersionUID = -2539902167731664733L;
+	{
+		// Whether or not to include the extension in the output
+		put(INCLUDE_EXTENSION, Boolean.TRUE);
+		// Whether or not to report the server type
+		put(INCLUDE_SERVERTYPE, Boolean.TRUE);
+		// Should we use Droid?
+		put(USE_DROID, Boolean.TRUE);
+		// Should we use Tika (parser)?
+		put(USE_TIKAPARSER, Boolean.TRUE);
+		// Should we use Tika (detect)?
+		put(USE_TIKADETECT, Boolean.TRUE);
+		// Should we use libmagic?
+		put(USE_LIBMAGIC, Boolean.FALSE);
+		// Whether to ignore the year of harvest (if so, will set a default year)
+		put(INCLUDE_WAYBACKYEAR, Boolean.FALSE);
+		// Whether to generate a c3po compatible zip per input arc (Tika parser required)
+		put(GENERATE_C3PO_ZIP, Boolean.TRUE);
+		// Whether to generate a zip containing serialized metadata objects; one per input arc (Tika parser required)
+		put(GENERATE_METADATA_ZIP, Boolean.TRUE);
+		// Whether or not to generate a sequencefile per input arc containing serialized Tika parser Metadata objects
+		put(GENERATE_SEQUENCEFILE, Boolean.TRUE);
+	    // whether to include the ARC header information in the output
+	    put(INCLUDE_ARC_HEADERS, Boolean.TRUE);
+		// dump the payload contents into a zip file in hdfs
+	    put(DUMP_FILES_IN_HDFS, Boolean.FALSE);
+	    // dump any files that cause a parser timeout into the c3po zip file
+	    put(DUMP_TIKA_PARSER_TIMEOUT_FILES_IN_C3PO_ZIP, Boolean.FALSE);
+	}};
     
 	//////////////////////////////////////////////////
 	// Global variables
@@ -109,7 +126,6 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 
 	private DroidDetector droidDetector = null;
     @SuppressWarnings("unused")
-	private Parser tikaParser = null;
 	private ProcessIsolatedTika isolatedTikaParser = null;
     private LibmagicJnaWrapper libMagicWrapper = null;
 	private Tika tikaDetect = null;
@@ -142,23 +158,10 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
      */
     private void loadConfig() {
     	
-    	final String propertiesFile = 				"FormatProfiler.properties";
-    	final String INCLUDE_EXTENSION_KEY = 		"INCLUDE_EXTENSION";
-    	final String INCLUDE_SERVERTYPE_KEY = 		"INCLUDE_SERVERTYPE";
-    	final String USE_DROID_KEY = 				"USE_DROID";
-    	final String USE_TIKADETECT_KEY = 			"USE_TIKADETECT";
-    	final String USE_TIKAPARSER_KEY = 			"USE_TIKAPARSER";
-    	final String USE_LIBMAGIC_KEY = 			"USE_LIBMAGIC";
-    	final String INCLUDE_WAYBACKYEAR_KEY = 		"INCLUDE_WAYBACKYEAR";
-    	final String GENERATE_SEQUENCEFILE_KEY = 	"GENERATE_SEQUENCEFILE";
-    	final String GENERATE_METADATA_ZIP_KEY = 	"GENERATE_METADATA_ZIP";
-    	final String GENERATE_C3PO_ZIP_KEY = 		"GENERATE_C3PO_ZIP";
-    	final String INCLUDE_ARC_HEADERS_KEY = 		"INCLUDE_ARC_HEADERS";
-    	
     	// load properties
     	InputStream p = FormatProfilerMapper.class.getClassLoader().getResourceAsStream(propertiesFile);
     	if(p!=null) {
-    		props = new Properties();
+    		Properties props = new Properties();
     		try {
     			props.load(p);
     		} catch (IOException e) {
@@ -168,96 +171,29 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 
     		log.info("Loaded properties from "+propertiesFile);
 
-    		if(props.containsKey(INCLUDE_EXTENSION_KEY)) {
-    			INCLUDE_EXTENSION = new Boolean(props.getProperty(INCLUDE_EXTENSION_KEY));
+    		// Iterate on the options and load the default from the class properties on errors
+    		for(Object key:props.keySet()) {
+    			if(key instanceof String) {
+    				if(gProps.containsKey(key)) {
+    					String k = (String)key;
+    					gProps.put(k, Boolean.valueOf(props.getProperty(k, gProps.get(k).toString())));
+    				}
+    			}
     		}
-
-    		if(props.containsKey(INCLUDE_SERVERTYPE_KEY)) {
-    			INCLUDE_SERVERTYPE = new Boolean(props.getProperty(INCLUDE_SERVERTYPE_KEY));
-    		}
-
-    		if(props.containsKey(USE_DROID_KEY)) {
-    			USE_DROID = new Boolean(props.getProperty(USE_DROID_KEY));
-    		}
-
-    		if(props.containsKey(USE_TIKADETECT_KEY)) {
-    			USE_TIKADETECT = new Boolean(props.getProperty(USE_TIKADETECT_KEY));
-    		}
-
-    		if(props.containsKey(USE_TIKAPARSER_KEY)) {
-    			USE_TIKAPARSER = new Boolean(props.getProperty(USE_TIKAPARSER_KEY));
+    		
+    		if(gProps.containsKey(USE_TIKAPARSER)) {
     			// We need the parser
-    			if(USE_TIKAPARSER) {
-    				USE_TIKADETECT = true;
+    			if(gProps.get(USE_TIKAPARSER)) {
+    				gProps.put(USE_TIKADETECT, Boolean.TRUE);
     			}
     		}
 
-    		if(props.containsKey(USE_LIBMAGIC_KEY)) {
-    			USE_LIBMAGIC = new Boolean(props.getProperty(USE_LIBMAGIC_KEY));
-    		}
-
-    		if(props.containsKey(INCLUDE_WAYBACKYEAR_KEY)) {
-    			INCLUDE_WAYBACKYEAR = new Boolean(props.getProperty(INCLUDE_WAYBACKYEAR_KEY));
-    		}
-    		
-    		if(props.containsKey(GENERATE_SEQUENCEFILE_KEY)) {
-    			GENERATE_SEQUENCEFILE = new Boolean(props.getProperty(GENERATE_SEQUENCEFILE_KEY));
-    		}
-    		
-    		if(props.containsKey(GENERATE_C3PO_ZIP_KEY)) {
-    			GENERATE_C3PO_ZIP = new Boolean(props.getProperty(GENERATE_C3PO_ZIP_KEY));
-    		}
-    		
-    		if(props.containsKey(GENERATE_METADATA_ZIP_KEY)) {
-    			GENERATE_METADATA_ZIP = new Boolean(props.getProperty(GENERATE_METADATA_ZIP_KEY));
-    		}
-
-            if (props.containsKey(INCLUDE_ARC_HEADERS_KEY)) {
-                INCLUDE_ARC_HEADERS = Boolean.valueOf(props.getProperty(INCLUDE_ARC_HEADERS_KEY));
-            }
     	}
     	
-		log.info("INCLUDE_EXTENSION: "+INCLUDE_EXTENSION);
-		log.info("INCLUDE_SERVERTYPE: "+INCLUDE_SERVERTYPE);
-		log.info("USE_DROID: "+USE_DROID);
-		log.info("USE_TIKADETECT: "+USE_TIKADETECT);
-		log.info("USE_TIKAPARSER: "+USE_TIKAPARSER);
-		log.info("USE_LIBMAGIC: "+USE_LIBMAGIC);
-		log.info("INCLUDE_WAYBACKYEAR: "+INCLUDE_WAYBACKYEAR);
-		log.info("GENERATE_SEQUENCEFILE: "+GENERATE_SEQUENCEFILE);
-		log.info("GENERATE_C3PO_ZIP: "+GENERATE_C3PO_ZIP);
-        log.info("INCLUDE_ARC_HEADERS: "+INCLUDE_ARC_HEADERS);
+		for(String key:gProps.keySet()) {
+			log.info(key+": "+gProps.get(key));
+		}
 
-    }
-
-    /**
-     * Initialise the Tika Parser
-     */
-    @SuppressWarnings("unused")
-	private void initTikaParser() {
-		AutoDetectParser parser = null;
-   		parser = new AutoDetectParser();
-    	
-    	// NOTE: Tika 1.4 & 1.5-SNAPSHOT parsers (and their dependencies) have problems with certain files
-		Map<MediaType, Parser> parsers = parser.getParsers();
-		
-	    // Hangs
-	    //log.info("Disabling parsing of audio/mpeg files");
-		//parsers.put(MediaType.audio("mpeg"), new EmptyParser());
-		
-	    // java.lang.OutOfMemoryError: Java heap space @ com.sun.imageio.plugins.png.PNGImageReader (JDK6)
-	    log.info("Disabling parsing of image/png files");
-		parsers.put(MediaType.image("png"), new EmptyParser());
-		
-	    // java.lang.OutOfMemoryError: Java heap space @ com.coremedia.iso.ChannelHelper.readFully (JDK6)
-	    log.info("Disabling parsing of video/mp4 files");
-		parsers.put(MediaType.video("mp4"), new EmptyParser());
-		
-		parser.setParsers(parsers);
-		
-		// wrap the parser in a TimeoutParser and use the default timeout value
-		tikaParser = new TimeoutParser(parser);
-		
     }
     
 	/**
@@ -270,7 +206,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 	    	
 	    	String filePrefix = gConf.get("mapred.output.dir")+"/"+pWarc; 
 
-	    	if(GENERATE_SEQUENCEFILE) {
+	    	if(gProps.get(GENERATE_SEQUENCEFILE)) {
 	    		// Set the output sequence file's name
 	    		Path seqFile = new Path(filePrefix+".tika.seqfile");
 	    		tikaParserSeqFile = SequenceFile.createWriter(gConf, Writer.compression(CompressionType.BLOCK),
@@ -281,23 +217,25 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 
     		FileSystem fs = null;
     		
-    		if(GENERATE_METADATA_ZIP||GENERATE_C3PO_ZIP||DUMP_FILES_IN_HDFS) {
+    		if(gProps.get(GENERATE_METADATA_ZIP)||
+    		   gProps.get(GENERATE_C3PO_ZIP)||
+    		   gProps.get(DUMP_FILES_IN_HDFS)) {
     			fs = FileSystem.get(gConf);
     		}
 
-	    	if(GENERATE_METADATA_ZIP) {
+	    	if(gProps.get(GENERATE_METADATA_ZIP)) {
 	    		// Zip file output
 	    		Path zip = new Path(filePrefix+".tika-obj.zip");
 	    		tikaParserMetadataZip = new ZipOutputStream(fs.create(zip));	    		
 	    	}
 	    	
-	    	if(GENERATE_C3PO_ZIP) {
+	    	if(gProps.get(GENERATE_C3PO_ZIP)) {
 	    		// Zip file output
 	    		Path zip = new Path(filePrefix+".tika.zip");
 	    		tikaC3poZip = new ZipOutputStream(fs.create(zip));
 	    	}
 	    	
-	    	if(DUMP_FILES_IN_HDFS) {
+	    	if(gProps.get(DUMP_FILES_IN_HDFS)) {
 	    		// Zip file output
 	    		Path zip = new Path(filePrefix+".dump.zip");
 	    		zipOutputFiles = new ZipOutputStream(fs.create(zip));
@@ -322,6 +260,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 				//try and remove as much additional as possible after the path
 				shortenedToExt = new URI(s).getPath().toLowerCase();
 			} catch (URISyntaxException e) {
+                //
 			}
 			// We assume that the last . is now before the file extension
 			if (shortenedToExt.contains(";")) {
@@ -365,7 +304,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
                         ext = ext.replaceAll( "[^0-9a-z]", "" );
                         
                         // try and sanitize some extensions
-                        String e = "";
+                        String e;// = "";
                         e = "html"; if(ext.startsWith(e)) { ext = e; }
                         e = "jpg"; if(ext.startsWith(e)) { ext = e; }
                         e = "jpeg"; if(ext.startsWith(e)) { ext = e; }
@@ -409,7 +348,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 		// Get the server header data:
 		if( !header.getHeaderFields().isEmpty() ) {
 			// The crawl year:
-			String waybackDate = ( ( String ) header.getDate() ).replaceAll( "[^0-9]", "" );
+			String waybackDate = ( header.getDate() ).replaceAll( "[^0-9]", "" );
 			if( waybackDate != null ) 
 				waybackYear = waybackDate.substring(0,waybackDate.length()<4?waybackDate.length():4);
 
@@ -447,7 +386,6 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 	
 	/**
 	 * Add metadata to the zip file, in a format c3po can use
-	 * @param metadata
 	 */
 	private void addFileToZip(ZipOutputStream zipFile, byte[] data, int len, int zipEntryCount, String ext) {
 		
@@ -516,7 +454,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 		loadConfig();
 		
 		// Set up Droid
-		if(USE_DROID) {
+		if(gProps.get(USE_DROID)) {
 			try {
 				droidDetector = new DroidDetector();
 				droidDetector.setBinarySignaturesOnly( droidUseBinarySignaturesOnly );
@@ -526,12 +464,12 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 		}
 		
 		// Set up Tika (detect)
-		if(USE_TIKADETECT) {
+		if(gProps.get(USE_TIKADETECT)) {
 			tikaDetect = new Tika();
 		}
 
 		// Set up Tika (parser)
-		if(USE_TIKAPARSER) {
+		if(gProps.get(USE_TIKAPARSER)) {
 			
 		    // store conf so it can be used to create a sequence file on HDFS
 		    gConf = job;
@@ -543,7 +481,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 		}
 
 		// Set up libMagic
-		if(USE_LIBMAGIC) {
+		if(gProps.get(USE_LIBMAGIC)) {
 			// Set up libMagicWrapper
 			libMagicWrapper = new LibmagicJnaWrapper();
 			// Load default magic file
@@ -560,29 +498,29 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 		// TODO Auto-generated method stub
 		super.close();
 		// tidy up
-		if(USE_TIKAPARSER) {
+		if(gProps.get(USE_TIKAPARSER)) {
 			if(null!=isolatedTikaParser) {
 				isolatedTikaParser.stop();
 			}
 		}
-		if(GENERATE_SEQUENCEFILE) {
+		if(gProps.get(GENERATE_SEQUENCEFILE)) {
 			if(null!=tikaParserSeqFile) {
 				tikaParserSeqFile.close();
 			}
 		}
-		if(GENERATE_C3PO_ZIP) {	
+		if(gProps.get(GENERATE_C3PO_ZIP)) {	
 			if(null!=tikaC3poZip) {
 				tikaC3poZip.finish();
 				tikaC3poZip.close();
 			}
 		}
-		if(GENERATE_METADATA_ZIP) {	
+		if(gProps.get(GENERATE_METADATA_ZIP)) {	
 			if(null!=tikaParserMetadataZip) {
 				tikaParserMetadataZip.finish();
 				tikaParserMetadataZip.close();
 			}
 		}
-		if(DUMP_FILES_IN_HDFS) {	
+		if(gProps.get(DUMP_FILES_IN_HDFS)) {	
 			if(null!=zipOutputFiles) {
 				zipOutputFiles.finish();
 				zipOutputFiles.close();
@@ -598,16 +536,16 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 		//log.info("                   URL: "+value.getRecord().getHeader().getUrl());
 		
 		// These is here instead of configure() as we want to use "key"
-		if((GENERATE_SEQUENCEFILE&(null==tikaParserSeqFile))||
-		   (GENERATE_C3PO_ZIP    &(null==tikaC3poZip))||
-		   (DUMP_FILES_IN_HDFS   &(null==zipOutputFiles))||
-		   (GENERATE_METADATA_ZIP&(null==tikaParserMetadataZip))) {
+		if((gProps.get(GENERATE_SEQUENCEFILE)&(null==tikaParserSeqFile))||
+		   (gProps.get(GENERATE_C3PO_ZIP)    &(null==tikaC3poZip))||
+		   (gProps.get(DUMP_FILES_IN_HDFS)   &(null==zipOutputFiles))||
+		   (gProps.get(GENERATE_METADATA_ZIP)&(null==tikaParserMetadataZip))) {
 				initOutputFiles(key);
 		}
 
 		// Year and type from record:
-		String waybackYear = "";
-		if(INCLUDE_WAYBACKYEAR) {
+		String waybackYear;// = "";
+		if(gProps.get(INCLUDE_WAYBACKYEAR)) {
 			waybackYear = getWaybackYear(value);
 		} else {
 			waybackYear = "na";
@@ -624,7 +562,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 			
 			String mapOutput = "";
 
-			if (INCLUDE_EXTENSION) {
+			if (gProps.get(INCLUDE_EXTENSION)) {
 				// Make sure we have something to turn in to a URL!
 //				if (extURL != null && extURL.length() > 0) {
 //					extURL = URLEncoder.encode(extURL, "UTF-8");
@@ -659,7 +597,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 			}
 			
 			
-			if (INCLUDE_SERVERTYPE) {
+			if (gProps.get(INCLUDE_SERVERTYPE)) {
 				mapOutput += "\t\"" + serverType + "\"";
 			}
 			
@@ -675,7 +613,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
             Map<String, String> arcHttpHeaders = new HashMap<String,String>();
 			if (record instanceof ARCRecord) {
 				ARCRecord arc = (ARCRecord) record;
-                if (INCLUDE_ARC_HEADERS) {
+                if (gProps.get(INCLUDE_ARC_HEADERS)) {
                     for (Header h: arc.getHttpHeaders()) {
                         arcHttpHeaders.put(h.getName(),h.getValue());
                     }
@@ -696,11 +634,11 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 			
 			// Mark the datastream so we can re-use it
 			// NOTE: this code will fail if >BUF_SIZE bytes are read
-			datastream.mark((int)BUF_SIZE);
+			datastream.mark(BUF_SIZE);
 
-			if(DUMP_FILES_IN_HDFS) {
+			if(gProps.get(DUMP_FILES_IN_HDFS)) {
 
-				byte[] buf = new byte[(int)BUF_SIZE];
+				byte[] buf = new byte[BUF_SIZE];
 				int len = datastream.read(buf);
 				addFileToZip(tikaParserMetadataZip, buf, len, zipEntryCount, "bin");
 				
@@ -708,7 +646,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 				
 			}
 			
-			if (USE_DROID) {
+			if (gProps.get(USE_DROID)) {
 				// Type according to DroidDetector
 				Metadata metadata = new Metadata();
 				metadata.set(Metadata.RESOURCE_NAME_KEY, extURL);
@@ -725,7 +663,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 			}
 			
 			String tdaTikaType = "";
-            if (USE_TIKADETECT) {
+            if (gProps.get(USE_TIKADETECT)) {
             	// Type according to Tika detect
             	Metadata metadata = new Metadata();
             	metadata.set(Metadata.RESOURCE_NAME_KEY, extURL);
@@ -740,7 +678,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 
             }
 			
-            if (USE_TIKAPARSER) {
+            if (gProps.get(USE_TIKAPARSER)) {
             	
             	// Type according to Tika parser
             	Metadata metadata = new Metadata();
@@ -762,7 +700,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
     				parserTikaType = "tikaParserTimeout";
     			}
 
-    			if(INCLUDE_ARC_HEADERS) {
+    			if(gProps.get(INCLUDE_ARC_HEADERS)) {
     				for (Map.Entry<String, String> t: arcHttpHeaders.entrySet()) {
     					metadata.set("ARC-"+t.getKey(),t.getValue());
     				}
@@ -771,8 +709,8 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
     			if(metadata.get(TimeoutParser.TIMEOUTKEY)!=null) {
     				// indicate the parser timed out in the reduce output
     				parserTikaType = "tikaParserTimeout";
-    				if(DUMP_TIKA_PARSER_TIMEOUT_FILES_IN_C3PO_ZIP&GENERATE_C3PO_ZIP) {
-    					byte[] buf = new byte[(int)BUF_SIZE];
+    				if(gProps.get(DUMP_TIKA_PARSER_TIMEOUT_FILES_IN_C3PO_ZIP)&gProps.get(GENERATE_C3PO_ZIP)) {
+    					byte[] buf = new byte[BUF_SIZE];
     					int len = datastream.read(buf);
     					// FIXME: different zip file??
     					addFileToZip(tikaC3poZip, buf, len, zipEntryCount, "err");
@@ -781,19 +719,27 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 
     			String mdString = null;
     			
-    			if(GENERATE_SEQUENCEFILE) {
+    			if(gProps.get(GENERATE_SEQUENCEFILE)) {
     				mdString = serialize(metadata);
     				tikaParserSeqFile.append(new Text(extURL), new Text(mdString));
     			}
     			
-    			if(GENERATE_METADATA_ZIP) {
+    			if(gProps.get(GENERATE_METADATA_ZIP)) {
     				if(null==mdString) {
     					mdString = serialize(metadata);
     				}
     				addFileToZip(tikaParserMetadataZip, mdString.getBytes(), mdString.getBytes().length, zipEntryCount, "txt");
     			}
 
-    			if(GENERATE_C3PO_ZIP) {
+    			if(gProps.get(GENERATE_C3PO_ZIP)) {
+    				// add filesize to the metadata object so c3po can process it
+    				// see: tika_property_mapping.properties
+    				final String CONTENT_LENGTH = "content-length";
+    				if(null==metadata.get(CONTENT_LENGTH)) {
+        				// note that this is the size of the whole record, including the size of the header
+    					final long recordSize = value.getRecord().getHeader().getLength();
+    					metadata.add(CONTENT_LENGTH, Long.toString(recordSize));
+    				}
     				// Store in the zip in c3po format
     				addMetadataToZip(tikaC3poZip, metadata, zipEntryCount);
     			}
@@ -807,7 +753,7 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
            		
             }
 
-            if (USE_LIBMAGIC) {
+            if (gProps.get(USE_LIBMAGIC)) {
 
             	// Use libmagic-jna-wrapper to identify the file
             	// You need to manually install this to your local maven repo - see pom for download url
@@ -864,14 +810,17 @@ public class FormatProfilerMapper extends MapReduceBase implements Mapper<Text, 
 			}			
 		} finally {
 			if (datastream != null) {
-				// Closing the datastream causes a NumberFormatException in 
-				// ArchiveRecord/ARCRecordMetaData, so don't directly close the input stream.
-				// The source InputStream is now wrapped in a CloseShieldInputStream, will see 
-				// if it makes a difference
+				// The source InputStream is now wrapped in a CloseShieldInputStream, as
+				// without it closing the datastream causes a NumberFormatException in 
+				// ArchiveRecord/ARCRecordMetaData
 				datastream.close();
 				datastream = null;
 			}
 		}
+	}
+	
+	public static void main(String[] args) {
+		new FormatProfilerMapper().loadConfig();
 	}
 
 }
